...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="New User?    "/>

            <TextView
                android:id="@+id/goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mint"
                android:text="Register"
                android:textStyle="bold"/>

...
